manifest/objects/ALTF__Account_Plan_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Accessed_in_Last_30_Days__c</fullName>
        <formula>TODAY() &lt; ALTF__Last_Accessed_Date__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accessed in Last 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Plan__c</fullName>
        <label>Account Manager Plan</label>
        <referenceTo>ALTF__Account_Plan__c</referenceTo>
        <relationshipLabel>Altify Account Manager Plan Team Members</relationshipLabel>
        <relationshipName>Account_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Days_In_Plan__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to give this user read/write</inlineHelpText>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Is_Plan_Owner__c</fullName>
        <formula>ALTF__Account_Plan__r.OwnerId =  ALTF__User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Plan Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Last_Accessed_Date__c</fullName>
        <label>Last Accessed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Number_Of_Days_Accessed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Days Accessed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Plan_Access_Ratio__c</fullName>
        <label>Plan Access Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Altify Account Manager Plan Team Member</label>
    <nameField>
        <label>Account Team</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>